@@ -256,7 +256,10 @@ nn-nn-06 - Version 3.1.15
 	
 	- Handle YYYY-MM-DD hh:mm:ss format of timestamp in 
 	  ResultSet.getTimeFromString().
-	
+	  
+	- Fixed BUG#24840 - character encoding of "US-ASCII" doesn't map correctly 
+	  for 4.1 or newer
+	  
 10-19-06 - Version 3.1.14
 
     - Fixed BUG#20479 - Updatable result set throws ClassCastException
